--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-hello
+<!DOCTYPE html>  <!--Used to specify which version of html this uses -->
+<html>
+	<head>
+		<title>Page Title</title>
+	</head>
+		<body>
+
+			<h1>This is a Heading</h1>
+				<p>This is a paragraph.</p>
+
+		</body>
+</html>
