--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			window.alert("SUCCESS");
 			}
 		</script>
-		<button id="button1" type="button" name="barryTheButton">Clickable</button>
+		<button id="button1" type="button" name="barryTheButton">Clickable2</button>
 
 	</head>
 		<body>
