--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			else if (el.attachEvent)
 		    el.attachEvent('onclick', clickedButton);
 			function clickedButton() {
-			window.alert("SUCCESS");
+			document.write("barry")
 			}
 		</script>
 		<button id="button1" type="button" name="barryTheButton">Clickable2</button>
