Adding in a title

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>  <!--Used to specify which version of html this uses -->
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="styles.css">
-		<title>The First of Many</title>
-		<button id="button1" type="button" name="barryTheButton">Clickable4</button>
+		<link rel="stylesheet" type="text/css" href="styles.css"> <!--Adds in the CSS stuff from my styles.css file in this folder -->
+		<title>The titled</title>
+		<button id="button1" type="button" name="barryTheButton">The Button</button>
 		<script>
 			var el = document.getElementById("button1");
 			if (el.addEventListener) //Only used to test whether or not addEventListener is supported
