Adding a big text thing

--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>  <!--Used to specify which version of html this uses -->
 <html>
+
 	<head>
 		<link rel="stylesheet" type="text/css" href="styles.css"> <!--Adds in the CSS stuff from my styles.css file in this folder -->
-		<title>The titled</title>
-		<button id="button1" type="button" name="barryTheButton">The Button</button>
+		<title>Tanuki1</title>
+	</head>
+
+		<body>
+
+			<h1>Luke Ginter</h1>
+
+			<button id="button1" type="button" name="barryTheButton">The Button</button>
 		<script>
 			var el = document.getElementById("button1");
 			if (el.addEventListener) //Only used to test whether or not addEventListener is supported
@@ -14,9 +21,6 @@
 					document.write(5+7)
 				}
 		</script>
-
-	</head>
-		<body>
 
 			<h1>BIG</h1>
 				<p>BALLS</p>
