--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	</head>
 
 		<body>
-
+			<div align="center">
 			<h1>Luke Ginter</h1>
+			</div>
 
 			<button id="button1" type="button" name="barryTheButton">The Button</button>
 		<script>
@@ -22,8 +23,7 @@
 				}
 		</script>
 
-			<h1>BIG</h1>
-				<p>BALLS</p>
+		<p>BIG BALLS</p>
 
 		</body>
 </html>
