--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 		<body>
 			<div class="outer">
-			<h1>"Luke Ginter and his many ''fjkdjf"</h1>
+			<h1>"Luke Ginter and his ma&#39ny ''fjkdjf"</h1>
 			</div>
 
 			<hr>
