Added an hr style

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1>"Luke Ginter&#39s Bomb Bazaar</h1>
 			</div>
 
-			<hr>
+			<hr style="style-seven">
 
 			<button id="button1" type="button" name="barryTheButton">The Button</button>
 		<script>
