--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
 		<body>
 			<div class="outer">
-			<h1>"Luke Ginter&#39s Bomb Bazaar</h1>
+			<h1>Luke Ginter&#39s Bomb Bazaar</h1>
 			</div>
 
-			<hr class="style-seven">
+			<hr class="sepStyle">
 
 			<button id="button1" type="button" name="barryTheButton">The Button</button>
 		<script>
