--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 			</div>
 
 			<hr class="sepStyle">
+			<a href="http://www.w3schools.com/html/">This is a link</a>
+			<hr class="sepStyle">
 
 			<button id="button1" type="button" name="barryTheButton">The Button</button>
 		<script>
