--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			</div>
 
 			<hr class="sepStyle">
-			<a href="http://www.w3schools.com/html/">This is a link</a>
+			<a href="nextPage.html">This is a link</a>
 			<hr class="sepStyle">
 
 			<button id="button1" type="button" name="barryTheButton">The Button</button>
