Third page added

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 
 	<head>
+		<meta charset="UTF-8"> <!--Provides helpful information to search engines-->
+		<meta name="description" content="Site to dick around with">
+		<meta name="keywords" content="Novice, beginner, scrub"> <!--Keywords for the search engine to parse -->
+		<meta name="author" content="Aden Petersen">
+
 		<link rel="stylesheet" type="text/css" href="styles.css"> <!--Adds in the CSS stuff from my styles.css file in this folder -->
 		<title>Tanuki1</title>
 	</head>
@@ -12,7 +17,10 @@
 			</div>
 
 			<hr class="sepStyle">
-			<a href="nextPage.html">This is a link</a>
+
+			<a href="nextPage.html"><h2>Home</h2></a>
+			<a href="thirdPage.html"><h2>Hills Pupil Tailored Website</h2></a>
+
 			<hr class="sepStyle">
 
 			<button id="button1" type="button" name="barryTheButton">The Button</button>
