--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 			<hr class="sepStyle">
 
-			<a href="nextPage.html"><h2>Home</h2></a>
-			<a href="thirdPage.html"><h2>Hills Pupil Tailored Website</h2></a>
+			<a href="nextPage.html"><h2>Second Page</h2></a>
+			<a href="thirdPage.html"><h2>Third Page</h2></a>
 
 			<hr class="sepStyle">
 
