--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		<meta name="keywords" content="Novice, beginner, scrub"> <!--Keywords for the search engine to parse -->
 		<meta name="author" content="Aden Petersen">
 
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> <!--used for favicon-->
+		<link rel="icon" href="/favicon.ico" type="image/x-icon">
+
 		<link rel="stylesheet" type="text/css" href="styles.css"> <!--Adds in the CSS stuff from my styles.css file in this folder -->
 		<title>Tanuki1</title>
 	</head>
