Added canvas to second page

--- a/nextPage.html
+++ b/nextPage.html
@@ -8,6 +8,8 @@
 
 		<body>
 
+		<canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;"></canvas>
+
 		<p>BIGGER BALLS</p>
 
 		</body>
