Added favicons for all pages and enlarged canvas

--- a/nextPage.html
+++ b/nextPage.html
@@ -3,12 +3,14 @@
 
 	<head>
 		<link rel="stylesheet" type="text/css" href="styles.css"> <!--Adds in the CSS stuff from my styles.css file in this folder -->
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> <!--used for favicon-->
+		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		<title>Tanuki1</title>
 	</head>
 
 		<body>
 
-		<canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;"></canvas>
+		<canvas id="myCanvas" width="500" height="1000" style="border:1px solid #000000;"></canvas>
 
 		<p>BIGGER BALLS</p>
 
