--- a/thirdPage.html
+++ b/thirdPage.html
@@ -3,6 +3,8 @@
 
 	<head>
 		<link rel="stylesheet" type="text/css" href="styles.css"> <!--Adds in the CSS stuff from my styles.css file in this folder -->
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> <!--used for favicon-->
+		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		<title>Tanuki1</title>
 	</head>
 
