Added js file and put in code to draw rectangle

--- a/nextPage.html
+++ b/nextPage.html
@@ -9,8 +9,11 @@
 	</head>
 
 		<body>
+		<canvas id="tetrisBoard" width="500" height="700" style="border:1px solid #000000;"></canvas>
+			<script src="shapes.js">
+			drawRect()
 
-		<canvas id="myCanvas" width="500" height="700" style="border:1px solid #000000;"></canvas>
+			</script>
 
 		<p>BIGGER BALLS</p>
 
