nm this shoudl work

--- a/nextPage.html
+++ b/nextPage.html
@@ -6,13 +6,11 @@
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> <!--used for favicon-->
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		<title>Tanuki1</title>
-		<script src="shapes.js">
-		</script>
 	</head>
 
 		<body>
 		<canvas id="tetrisBoard" width="500" height="700" style="border:1px solid #000000;"></canvas>
-		drawRect()
+		<script src="shapes.js"></script>
 
 		<p>BIGGER BALLS</p>
 
