Added auxiliary file for clarity. Made much of the code more modular

--- a/nextPage.html
+++ b/nextPage.html
@@ -5,6 +5,8 @@
 		<link rel="stylesheet" type="text/css" href="styles.css"> <!--Adds in the CSS stuff from my styles.css file in this folder -->
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> <!--used for favicon-->
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
+		<script type="text/javascript" src="shapes.js"></script>  <!--These two lines will hopefully link the files together/make things nice-looking -->
+		<script type="text/javascript" src="game.js"></script> 
 		<title>Tanuki1</title>
 	</head>
 
