Added new files for organization purposes and made the code much more streamlined

--- a/nextPage.html
+++ b/nextPage.html
@@ -5,16 +5,20 @@
 		<link rel="stylesheet" type="text/css" href="styles.css"> <!--Adds in the CSS stuff from my styles.css file in this folder -->
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> <!--used for favicon-->
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
-		<script type="text/javascript" src="shapes.js"></script>  <!--These two lines will hopefully link the files together/make things nice-looking -->
-		<script type="text/javascript" src="game.js"></script> 
 		<title>Tanuki1</title>
 	</head>
 
 		<body>
 		<canvas id="tetrisBoard" width="500" height="700" style="border:1px solid #000000;"></canvas>
+		<script type="text/javascript" src="shapes.js"></script>  <!--These lines will hopefully link the files together/make things nice-looking -->
+		<script type="text/javascript" src="game.js"></script> 
+		<script type="text/javascript" src="board.js"></script> 
+		<script type="text/javascript" src="main.js"></script>
 		<script src="shapes.js"></script>
+		<script src="game.js"></script>
+		<script src="main.js"></script>
 
-		<p>BIGGER BALLS</p>
+		<p>Tetris page</p>
 
 		</body>
 </html>
