Moving computers. Trying to get keyboard input working

--- a/nextPage.html
+++ b/nextPage.html
@@ -11,10 +11,11 @@
 		<body>
 		<canvas id="tetrisBoard" width="500" height="700" style="border:1px solid #000000;"></canvas>
 		<script type="text/javascript" src="shapes.js"></script>  <!--These lines will hopefully link the files together/make things nice-looking -->
+		<script type="text/javascript" src="input.js"></script>
 		<script type="text/javascript" src="game.js"></script> 
 		<script type="text/javascript" src="board.js"></script> 
 		<script type="text/javascript" src="main.js"></script>
-		<p></p>
+		<p>Tetris</p>
 
 		</body>
 </html>
