--- a/nextPage.html
+++ b/nextPage.html
@@ -14,6 +14,7 @@
 		<script type="text/javascript" src="input.js"></script>
 		<script type="text/javascript" src="game.js"></script> 
 		<script type="text/javascript" src="board.js"></script> 
+		<script type="text/javascript" src="tetris.js"></script>
 		<script type="text/javascript" src="main.js"></script>
 		<p>Tetris</p>
 
