--- a/nextPage.html
+++ b/nextPage.html
@@ -9,7 +9,7 @@
 	</head>
 
 		<body>
-		<canvas id="tetrisBoard" width="500" height="700" tabindex= "1" style="border:1px solid #000000;"></canvas>
+		<canvas id="tetrisBoard" width="800" height="700" tabindex= "1" style="border:1px solid #000000;"></canvas><!--Originally 500/700 -->
 		<script type="text/javascript" src="shapes.js"></script>  <!--These lines will hopefully link the files together/make things nice-looking -->
 		<script type="text/javascript" src="input.js"></script>
 		<script type="text/javascript" src="game.js"></script> 
