Added in remaining schedule. Added in UI functions. Groundwork is all there for uiboard

--- a/nextPage.html
+++ b/nextPage.html
@@ -10,11 +10,13 @@
 
 		<body>
 		<canvas id="tetrisBoard" width="300" height="540" tabindex= "1" style="border:1px solid #000000;"></canvas><!--Originally 500/700 -->
+		<canvas id="scoreBoard" width="300" height="540" style="border:1px solid #000000;"></canvas><!--Originally 500/700 -->
 		<script type="text/javascript" src="shapes.js"></script>  <!--These lines will hopefully link the files together/make things nice-looking -->
 		<script type="text/javascript" src="input.js"></script>
 		<script type="text/javascript" src="game.js"></script> 
 		<script type="text/javascript" src="board.js"></script> 
 		<script type="text/javascript" src="tetris.js"></script>
+		<script type="text/javascript" src="uiboard.js"></script>
 		<script type="text/javascript" src="main.js"></script>
 		<p>Tetris</p>
 
