--- a/nextPage.html
+++ b/nextPage.html
@@ -10,7 +10,7 @@
 
 		<body>
 		<canvas id="tetrisBoard" width="300" height="540" tabindex= "1" style="border:1px solid #000000;"></canvas><!--Originally 500/700 -->
-		<canvas id="scoreBoard" width="300" height="540" style="border:1px solid #000000;"></canvas><!--Originally 500/700 -->
+		<canvas id="scoreBoard" width="300" height="540"></canvas><!--Originally 500/700 -->
 		<script type="text/javascript" src="shapes.js"></script>  <!--These lines will hopefully link the files together/make things nice-looking -->
 		<script type="text/javascript" src="input.js"></script>
 		<script type="text/javascript" src="game.js"></script> 
