Fixed the merged conflict. What a nightmare

--- a/nextPage.html
+++ b/nextPage.html
@@ -18,7 +18,7 @@
 		<script type="text/javascript" src="tetris.js"></script>
 		<script type="text/javascript" src="uiboard.js"></script>
 		<script type="text/javascript" src="main.js"></script>
-		<p>Tetris</p>
+		<!--<p>Tetris</p>-->
 
 		</body>
 </html>
